assets/pipelines/k8s_deploy/ingress/patch-argocd-ingress-cdk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/security-groups: ${ALB_SG_ID}
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}
    external-dns.alpha.kubernetes.io/hostname: ${ARGOCD_DOMAIN_NAME}
spec:
  tls:
    - hosts:
        - ${ARGOCD_DOMAIN_NAME}
